--- a/setup.cfg
+++ b/setup.cfg
@@ -6,4 +6,4 @@ docs = develop easy_install diceware[docs]
 [pytest]
 addopts = --doctest-modules
           --doctest-glob='*.rst'
-          waeup README.rst
+          waeup README.rst tests
