--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,4 @@ docs = develop easy_install diceware[docs]
 addopts = --doctest-modules
           --doctest-glob='*.rst'
           waeup README.rst tests
+norecursedirs = sample
