--- a/tox.ini
+++ b/tox.ini
@@ -8,4 +8,4 @@ commands=python setup.py dev
 
 [testenv:flake8]
 deps=flake8
-commands=flake8 waeup.sphinx.autodoc tests setup.py
+commands=flake8 waeup tests setup.py
