--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [aliases]
 distribute = register sdist upload
-dev = develop easy_install diceware[tests]
-docs = develop easy_install diceware[docs]
+dev = develop easy_install waeup.sphinx.autodoc[tests]
+docs = develop easy_install waeup.sphinx.autodoc[docs]
 
 [pytest]
 addopts = --doctest-modules
