--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, pypy, py26, py27, py32, py33, py34
+envlist = flake8, pypy, py26, py27, py32, py33, py34, coverage
 
 [testenv]
 usedevelop=True
@@ -10,3 +10,10 @@ commands=python setup.py dev
 [testenv:flake8]
 deps=flake8
 commands=flake8 waeup tests setup.py
+
+[testenv:coverage]
+deps=coverage
+commands=
+  coverage erase
+  coverage run setup.py test
+  coverage report --include='waeup/sphinx/*,setup.py' --fail-under=100
