--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ before_install:
   # nothing to do, currently
 # command to install dependencies
 install:
-  - pip install tox
+  - pip install zope.interface
+  - python setup.py dev
 # command to run tests
 script:
-  - tox -e py27
+  - py.test
