--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = flake8, pypy, py26, py27, py32, py33, py34, coverage
+envlist = flake8, py26, py27, coverage
 
 [testenv]
 usedevelop=True
