Add support for wheels.
Looks like we are compatible enough for wheels. So let's use it.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [aliases]
-distribute = register sdist upload
+distribute = register sdist bdist_wheel upload
 dev = develop easy_install waeup.sphinx.autodoc[tests]
 docs = develop easy_install waeup.sphinx.autodoc[docs]
 
@@ -8,3 +8,6 @@ addopts = --doctest-modules
           --doctest-glob='*.rst'
           waeup README.rst tests
 norecursedirs = sample
+
+[bdist_wheel]
+universal = 1
